--- a/cog.yaml
+++ b/cog.yaml
@@ -1,7 +1,7 @@
 build:
   gpu: true
   cuda: "11.8"
-  python_version: "3.10"
+  python_version: "3.11"
   python_packages:
     - "diffusers==0.17.1"
     - "torch==2.0.1"
@@ -11,5 +11,6 @@ build:
     - "accelerate==0.20.3"
   system_packages:
     - "unzip"
-
+  run:
+    - curl -o /usr/local/bin/pget -L "https://github.com/replicate/pget/releases/download/v0.0.3/pget" && chmod +x /usr/local/bin/pget
 predict: "predict.py:Predictor"
